# proxyman

./: .gitignore  Makefile  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: release.yml  test-build.yml
.zed/: settings.json
src/: App.css  App.tsx  global.css  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/ca/: proxyman.cer
src-tauri/capabilities/: run-app.json
src-tauri/icons/: icon.icns
src-tauri/permissions/proxy/: default.toml
src-tauri/resources/ca/: proxyman.key
src-tauri/src/: main.rs
src-tauri/src/app_conf/: app_setting.rs  error.rs  mod.rs
src-tauri/src/ca/: error.rs  mod.rs
src-tauri/src/commands/: app_setting.rs  ca.rs  global_proxy.rs  mod.rs  processor.rs  values.rs
src-tauri/src/commands/processor/: file_storage.rs
src-tauri/src/error/: configuration_error.rs  endpoint_error.rs  mod.rs  processor_error.rs
src-tauri/src/events/: mod.rs
src-tauri/src/processors/: http_processor.rs  mod.rs  parser.rs  persist.rs  processor.rs  processor_effect.rs  processor_id.rs  processor_pack.rs  values.rs
src-tauri/src/processors/http_processor/: delay.rs  redirect.rs  response.rs
src-tauri/src/processors/persist/: error.rs  mod.rs  processor_persist.rs  value_persist.rs
src-tauri/src/proxy/: decoder.rs  error.rs  mod.rs  processor.rs  rewind.rs  service.rs  tunnel.rs
src-tauri/src/sys_events/: mod.rs
src-tauri/src/window/: mod.rs
src/Commands/: Commands.ts
src/Components/Connections/: Connections.tsx  DetailVisibleStore.ts  Filters.tsx  connections.css
src/Components/Connections/ContextMenu/: ContextMenu.tsx
src/Components/Connections/Detail/: ConnectionDetail.tsx  Headers.tsx  Request.tsx  Response.tsx  Separator.tsx  index.css
src/Components/Connections/Detail/Hooks/: usePretty.ts
src/Components/Drawer/: Drawer.tsx
src/Components/MonacoEditor/: MonacoEditor.ts  useEditorTheme.ts
src/Components/Sidebar/: Sidebar.tsx  index.css  sidebar.css
src/Components/Sidebar/Pin/: Pin.tsx
src/Components/Sidebar/Rule/: Rule.tsx  RuleActions.ts  RuleHeader.tsx  rule.css  useRuleEditor.ts
src/Components/Sidebar/Rule/Editors/: Delay.tsx  Redirect.tsx
src/Components/Sidebar/Rule/Hooks/: UseRuleEditor.ts  usePacks.ts  useRuleEditor.ts
src/Components/Sidebar/Title/: Title.tsx  index.css
src/Components/Sidebar/Toolbar/: Toolbar.tsx  useGlobalProxy.ts
src/Components/TopBar/: TopBar.tsx  index.css  topbar.css  useLayout.ts  useSystemProxy.ts  useTheme.ts
src/Events/: ConnectionEvents.ts
src/Icons/: AddIcon.tsx  BottomLayoutIcon.tsx  ClearIcon.tsx  CodeIcon.tsx  CopyIcon.tsx  DeleteIcon.tsx  FilterIcon.tsx  HttpIcon.tsx  IconProps.ts  MoonIcon.tsx  NetworkIcon.tsx  PauseIcon.tsx  PinIcon.tsx  PlayIcon.tsx  RightLayoutIcon.tsx  RuleIcon.tsx  SearchIcon.tsx  SecureIcon.tsx  SharpIcon.tsx  SunIcon.tsx  TableIcon.tsx  index.ts
src/Monaco/: Monaco.ts
src/Routes/: Root.tsx
src/Routes/Connections/: ConnActionStore.ts  Connections.tsx  Filters.tsx  Pin.tsx  index.css
src/Routes/Connections/Detail/: ConnectionDetail.tsx  Headers.tsx  Helper.ts  Request.tsx  Response.tsx  index.css
src/Routes/Connections/Detail/Hooks/: useDecodeURIComponent.ts  usePretty.ts
src/Routes/Pack/: CreatePack.tsx  Pack.tsx  useCreatePack.ts
src/Routes/Rule/: Rule.tsx  usePacks.ts  useRuleEditor.ts
src/Routes/Value/: CreateValue.tsx  Value.tsx  Values.tsx  useCreateValue.ts  useValueStore.ts
src/Store/: ConnectionStore.ts  PinUriStore.ts  useAppSetting.ts
